// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Atom] Button Button renders correctly with props 1`] = `
<button
  className="ant-btn css-dev-only-do-not-override-k83k30 ant-btn-default ant-btn-block sc-bcXHqe gzxuKf"
  disabled={true}
  onClick={[Function]}
  type="button"
  variance="primary"
>
  <span>
    Click Me
  </span>
</button>
`;

exports[`[Atom] Button Button renders correctly without props 1`] = `
<button
  className="ant-btn css-dev-only-do-not-override-k83k30 ant-btn-default sc-bcXHqe gzxuKf"
  disabled={false}
  onClick={[Function]}
  type="button"
  variance="primary"
>
  <span>
    Click Me
  </span>
</button>
`;
